<resources>
    <string name="app_name">SnackVice</string>
    <string name="homepage_title">Home</string>
    <string name="user_page_title">Profile</string>
    <string name="likes_page_title">Likes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_a_snack">Search a snack</string>
    <string name="add_a_snack">Add a snack</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="form_field_snack_name">Snack Name</string>
    <string name="snack_location">Snack Location(s):</string>
    <string name="africa">Africa</string>
    <string name="asia">Asia</string>
    <string name="australia">Australia</string>
    <string name="europe">Europe</string>
    <string name="north_america">North America</string>
    <string name="south_america">South America</string>
    <string name="form_field_snack_weight">Snack Weight(in g)</string>
    <string name="form_field_snack_cals">Snack Calories(for 100g)</string>
    <string name="form_field_snack_joules">Snack Kilojoules(for 100g)</string>
    <string name="snack_ingredients">Snack Ingredients:</string>
    <string name="cacao">Cacao</string>
    <string name="salt">Salt(in g)</string>
    <string name="sugar">Sugar(in g)</string>
    <string name="Image">Snack Image</string>
    <string name="snack_image">Snack Image</string>
    <string name="loading">Loading…</string>
    <string name="snack_added">The snack has been added</string>
    <string name="ok">OK</string>
    <string name="create_account">Create an account</string>
    <string name="form_field_username">Username</string>
    <string name="form_field_email">Email</string>
    <string name="form_field_password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot your password ?</string>
    <string name="email_already_used_message">This email is already taken.</string>
    <string name="field_empty_error">Please fill in this field.</string>
    <string name="field_email_error">Please enter a valid email address.</string>
    <string name="field_password_error">Please enter a password of at least 8 characters.</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in_error_incorrect_login">Email or password incorrect</string>
    <string name="water">Water(in g)</string>
    <string name="oil_and_fat">Oil and fat(in g)</string>
    <string name="flavouring">Flavouring(in g)</string>
    <string name="dairy">Dairy(in g)</string>
    <string name="vegetable_oil_and_fat">Vegetable oil and fat(in g)</string>
    <string name="cereal">Cereal(in g)</string>
    <string name="vegetable">Vegetable(in g)</string>
    <string name="fruit">Fruit(in g)</string>
    <string name="flour">Flour(in g)</string>
    <string name="wheat">Wheat(in g)</string>
    <string name="root_vegetable">Root vegetable(in g)</string>
    <string name="vegetable_oil">Vegetable oil(in g)</string>
    <string name="glucose">Glucose(in g)</string>
    <string name="starch">Starch(in g)</string>
    <string name="milk">Milk(in g)</string>
    <string name="natural_flavouring">Natural flavouring(in g)</string>
    <string name="cereal_flour">Cereal flour(in g)</string>
    <string name="spice">Spice(in g)</string>
    <string name="sort">From</string>

</resources>